style: correct responsive issues on mobile devices and center footer text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,11 +66,14 @@ header img {
 .navbar-brand {
     font-family: "Roboto Slab", "Sacramento", "Roboto", "Open Sans", sans-serif;
     font-weight: 800;
-    font-size: 24px;
+    font-size: 14px;
+    height: 39.6px;
     background-color: white;
     color: #5058A8;
     padding-left: 10px;
     padding-right: 10px;
+    display: flex;
+    align-items: center;
 }
 
 .navbar-brand:hover {
@@ -82,6 +85,7 @@ header img {
 footer {
     background-color: #5058A8;
     color: white;
+    text-align: center;
 }
 
 footer i {
@@ -93,7 +97,7 @@ footer i {
 #index-logo {
     font-family: "Roboto Slab", "Sacramento", "Roboto", "Open Sans", sans-serif;
     font-weight: 800;
-    font-size: 40px;
+    font-size: 22px;
     background-color: white;
     color: #5058A8;
     padding-left: 10px;
